--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,12 @@
 spring.application.name=ims
-
-# DataSource
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=ims
-spring.datasource.username=postgres
-spring.datasource.password=dev_pass
-
 spring.jpa.show-sql=true
 
+# AWS
+aws.s3.region=ap-northeast-1
 
 ## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+## The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
+## Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
