--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+###
+application-local.properties
+
+
 ### STS ###
 .apt_generated
 .classpath
