--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>org.springframework.cloud</groupId>
-		    <artifactId>spring-cloud-starter-aws</artifactId>
-		    <version>2.2.6.RELEASE</version>
+   			<groupId>com.amazonaws</groupId>
+   			<artifactId>aws-java-sdk</artifactId>
+   			<version>1.11.133</version>
 		</dependency>
 		<dependency>
 		    <groupId>commons-io</groupId>
@@ -93,5 +93,15 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<resources>
+		    <resource>
+		      <directory>resources</directory>
+		      <targetPath>src/main/resources</targetPath>
+		      <includes>
+		        <include>application.properties</include>
+		        <include>application-local.properties</include>
+		      </includes>
+		    </resource>
+    	</resources>
 	</build>
 </project>
