--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,8 @@
 		    <groupId>org.mybatis.spring.boot</groupId>
 		    <artifactId>mybatis-spring-boot-starter</artifactId>
 		    <version>3.0.3</version>
-		</dependency>	
+		</dependency>
+		
 		<dependency>
 		    <groupId>org.modelmapper</groupId>
 		    <artifactId>modelmapper</artifactId>
@@ -85,6 +86,23 @@
             <artifactId>jquery</artifactId>
             <version>3.6.0</version>
         </dependency>
+        <dependency>
+		    <groupId>javax.activation</groupId>
+		    <artifactId>activation</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+        <!-- API, java.xml.bind module -->
+		<dependency>
+		    <groupId>jakarta.xml.bind</groupId>
+		    <artifactId>jakarta.xml.bind-api</artifactId>
+		    <version>2.3.2</version>
+		</dependency>	
+		<!-- Runtime, com.sun.xml.bind module -->
+		<dependency>
+		    <groupId>org.glassfish.jaxb</groupId>
+		    <artifactId>jaxb-runtime</artifactId>
+		    <version>2.3.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -93,15 +111,5 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<resources>
-		    <resource>
-		      <directory>resources</directory>
-		      <targetPath>src/main/resources</targetPath>
-		      <includes>
-		        <include>application.properties</include>
-		        <include>application-local.properties</include>
-		      </includes>
-		    </resource>
-    	</resources>
 	</build>
 </project>
