add del btns and del method in listController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=ims
 spring.jpa.show-sql=true
+spring.mvc.hiddenmethod.filter.enabled=true
 
 # AWS
 aws.s3.region=ap-northeast-1
@@ -10,5 +11,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 ## Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
 
 
