--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
    			<version>1.11.133</version>
 		</dependency>
 		<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-aws</artifactId>
+            <version>2.2.6.RELEASE</version>
+        </dependency>
+        <dependency>
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
 		    <version>2.15.1</version>
@@ -106,7 +111,7 @@
 	</dependencies>
 	<build>
 		<plugins>
-			<plugin>
+		    <plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
