--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
+# import env properties
+spring.config.location=optional:./application-local.properties
+
 spring.application.name=ims
 spring.jpa.show-sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
 
 # AWS
 aws.s3.region=ap-northeast-1
+
 
 ## Hibernate Properties
 ## The SQL dialect makes Hibernate generate better SQL for the chosen database
