fix delete conf. modal (add th: in front of attributes on

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,22 @@
-# import env properties
-spring.config.location=optional:./application-local.properties
+# import properties
+spring.config.import=application-local.properties
 
 spring.application.name=ims
 spring.jpa.show-sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
 
-# AWS
+# AWS setting
 aws.s3.region=ap-northeast-1
+aws.endpoint.url=${AWS_ENDPOINT}
+aws.s3.bucket.name=${AWS_BUCKETNAME}
+aws.access.key.id=${ACCESS_KEY}
+aws.secret.access.key=${SECRET_ACCESS_KEY}
 
+# PostgreSQL
+spring.datasource.url=${DB_DATASOURCE}
+spring.datasource.username =${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 ## Hibernate Properties
 ## The SQL dialect makes Hibernate generate better SQL for the chosen database
