write junit tests for prodReg Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.jpa.hibernate.ddl-auto = update
 
 ## mybatis setting
 mybatis.configuration.map-underscore-to-camel-case=true
+
+## javax validation setting
+# https://stackoverflow.com/questions/69072406/hv000028-unexpected-exception-during-isvalid-call
+spring.jpa.properties.javax.persistence.validation.mode=none
